exports[`Reducers::Kiosk addError action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [
    Object {
      "code": "500",
      "message": "Error",
    },
  ],
  "google_analytics": undefined,
  "restart_kiosk": "",
  "slides": Array [],
  "starting_slide_index": 0,
  "title": "",
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducers::Kiosk matches the snapshot 1`] = `[Function]`;

exports[`Reducers::Kiosk scrollToSlide action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "google_analytics": undefined,
  "restart_kiosk": "",
  "slides": Array [],
  "starting_slide_index": 1,
  "title": "",
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducers::Kiosk setKiosk action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "google_analytics": undefined,
  "kid": undefined,
  "map_default_floor_number": undefined,
  "maps_base_url": undefined,
  "name": undefined,
  "restart_kiosk": "",
  "slides": Array [],
  "starting_slide_index": 0,
  "title": "",
  "type": Object {
    "api": Object {
      "classroom_schedule": "/api/v1/classrooms/date/{date}",
      "classrooms": "/api/v1/classrooms/rooms",
      "hours": "/api/v1/hours",
    },
    "errors": Array [],
    "restart_kiosk": "",
    "slides": Array [],
    "starting_slide_index": 0,
    "title": "",
    "type": "touch",
    "url": "/url/to/action",
  },
  "url": undefined,
}
`;

exports[`Reducers::Kiosk setRestartKiosk action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "google_analytics": undefined,
  "restart_kiosk": "",
  "slides": Array [],
  "starting_slide_index": 0,
  "title": "",
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducers::Kiosk setSlides action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "google_analytics": undefined,
  "restart_kiosk": "",
  "slides": Array [
    Object {
      "caption": "Slide.caption",
      "created_at": "2000-12-31T11:59:59Z",
      "expires_at": "2020-12-31T23:59:59Z",
      "id": 1,
      "kiosk": "Kiosk.name",
      "original": "/uploads/default_slide_1.png",
      "slide_type": "SlideType.name",
      "thumbnail": "/uploads/default_slide_1.png",
      "title": "Slide.title",
      "updated_at": "2000-12-31T23:59:59Z",
      "xlarge": "/uploads/default_slide_1.png",
    },
    Object {
      "caption": "Slide.caption:2",
      "created_at": "2000-11-11T11:00:00Z",
      "expires_at": "2010-11-11T13:00:00Z",
      "id": 2,
      "kiosk": "Kiosk.name:2",
      "original": "/uploads/default_slide_2.png",
      "slide_type": "SlideType.name:2",
      "thumbnail": "/uploads/default_slide_1.png",
      "title": "Slide.title:2",
      "updated_at": "2000-11-11T13:00:00Z",
      "xlarge": "/uploads/default_slide_1.png",
    },
  ],
  "starting_slide_index": 0,
  "title": "",
  "type": "touch",
  "url": "kiosk/touch",
}
`;

exports[`Reducers::Kiosk setTitle action matches the snapshot 1`] = `
Object {
  "api": Object {
    "available_rooms": "/api/v1/rooms/available/{date}",
    "hours": "/api/v1/hours",
  },
  "errors": Array [],
  "google_analytics": undefined,
  "restart_kiosk": "",
  "slides": Array [],
  "starting_slide_index": 0,
  "title": "MyTitle",
  "type": "touch",
  "url": "kiosk/touch",
}
`;
